# youtube-comment-sentiment-analysis

./: .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  mlflow_experiment_info.json  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: app.py  connect_dagshub.py  defined_functions.py  get_logger.py  model_update.py  requirements.txt  text_preprocess.py
data/raw/: .gitignore
deploy/script/: start_docker.sh
models/: .gitignore
notebooks/: KNNClassifier_experiment.ipynb  LGBMClassifier_experiment.ipynb  MultinomialNB_experiment.ipynb  RandomForestClassifier_experiment.ipynb  SVC_experiment.ipynb  XGBClassifier_experiment.ipynb  base_feature_engineering_and_model.ipynb  custom_feature_experiment.ipynb  feature_engineering_experiments.ipynb  handling_imbalance_experiment.ipynb  pre-processing.ipynb
reports/: .gitignore
scripts/: promote_model.py
src/: DagshubConnector.py  data_cleaning.py  data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_building.py  model_evaluation.py  model_registry.py  setup_logger.py
test/: model_test.py
