[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "youtube_comment_sentiment_analysis"
version = "0.0.1"
description = "this project on building a end-to-end a ml model building to model deployment to available to use for users."
authors = [
  { name = "saurav kumar" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["youtube_comment_sentiment_analysis"]
force_sort_within_sections = true
